@@ -1,3 +1,7 @@
+16-07-2005 Qball <Qball@qballcow.nl>
+	* pixmap/media-playlist.png:	Added
+	* moved used images to svg
+
 10-07-2005 Qball <Qball@qballcow.nl>
 	* configure.ac:			--disable-gnome-vfs will remove the
 	gnome-vfs dependency of gmpc.
